# low_kit

./: .gitignore  Makefile  pyproject.toml  setup.cfg  setup.py  test.py
src/kitsimple/objects/: globalconfig.py
src/lowkit/: cli.py  config.py  utils.py
src/lowkit/functions/: helpers.py  utils.py
src/lowkit/infosources/: config.py  distribution.py  platform.py
src/lowkit/initialization/: helpers.py  workingset.py
src/lowkit/initialization/scaffolding/: __init__.py
src/lowkit/objects/: globalvars.py
src/lowkit/ops/: filesystem.py  wd.py
src/lowkit/ops/scaffolding/: __init__.py
src/lowkit/ux/: cli.py
